--- a/pom.xml
+++ b/pom.xml
@@ -108,7 +108,7 @@
 	<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco.version}</version>
+				<version>1.8.8</version>
 				<executions>
 					<execution>
 						<id>prepare-agent</id>
